Align instagram photos correctly

--- a/assets/css/social-media.css
+++ b/assets/css/social-media.css
@@ -1,6 +1,7 @@
 .gallery {
     margin: 0 auto;
     display: flex;
+    justify-content: space-between;
     margin-bottom: 3em;
 }
 
